--- a/wp-proekt-frontend/package.json
+++ b/wp-proekt-frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
     "react-moment": "^0.9.7",
+    "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
