--- a/wp-proekt-frontend/package.json
+++ b/wp-proekt-frontend/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
     "react-moment": "^0.9.7",
