--- a/wp-proekt-frontend/package.json
+++ b/wp-proekt-frontend/package.json
@@ -13,12 +13,15 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-confirm-alert": "^2.4.1",
+    "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
     "react-moment": "^0.9.7",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-simple-timefield": "^3.0.0",
+    "react-timekeeper": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
