Switch to MS SQL Server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#?
+# ?
 server.error.include-exception=true
 
-#?
+# ?
 spring.jpa.open-in-view=false
 
 ## default connection pool
@@ -9,14 +9,35 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:54320/wp_proekt
-spring.datasource.username=wp
-spring.datasource.password=wp123
+#spring.datasource.url=jdbc:postgresql://localhost:54320/wp_proekt
+#spring.datasource.username=wp
+#spring.datasource.password=wp123
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+
+## Hibernate Properties
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+
+## MS SQL
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost:5434;useUnicode=true;characterEncoding=UTF-8;
+
+spring.datasource.username=sa
+spring.datasource.password=Pass@word
+
+## Hibernate Properties
+spring.jpa.properties.hibernate.dialect = mk.ukim.finki.wp.proekt.config.UnicodeSQLServerDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.legacy_limit_handler=true
+
+
