--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,35 @@
 version: "3"
 services:
   #  Create a service named db.
-  wp-db:
+  #wp-db:
     #   Use the Docker Image postgres. This will pull the newest release.
-    image: "postgres"
+    #image: "postgres"
     #   Give the container the name my_postgres. You can changes to something else.
-    container_name: "wp_proekt_postgres"
+    #container_name: "wp_proekt_postgres"
     #   Setup the username, password, and database name. You can changes these values.
-    environment:
-      - POSTGRES_USER=wp
-      - POSTGRES_PASSWORD=wp123
-      - POSTGRES_DB=wp_proekt
+    #environment:
+    #  - POSTGRES_USER=wp
+    #  - POSTGRES_PASSWORD=wp123
+    #  - POSTGRES_DB=wp_proekt
     #   Maps port 54320 (localhost) to port 5432 on the container. You can change the ports to fix your needs.
-    ports:
-      - "54320:5432"
+    #ports:
+    #  - "54320:5432"
     #   Set a volume some that database is not lost after shutting down the container.
     #   I used the name postgres-data but you can changed it to something else.
+    #volumes:
+    #  - C:/Users/Evgenij/PostgreSQL/proekt
+
+  mssql-db:
+    image: "mcr.microsoft.com/mssql/server"
+
+    container_name: "wp_proekt_mssql"
+
+    environment:
+      - SA_PASSWORD=Pass@word
+      - ACCEPT_EULA=Y
+
+    ports:
+      - "5434:1433"
+
     volumes:
-      - C:/Users/Evgenij/PostgreSQL/lab
+      - C://Users//Evgenij//MSSQL//proekt
